[tool.poetry]
name = "db-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"
choco = "^1.0.5"
ngrok = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
